force-app/main/default/objects/User/fields/Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Broadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broadcast</label>
    <type>Checkbox</type>
</CustomField>