force-app/main/default/objects/User/fields/Daily_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate_Card__c</fullName>
    <label>Daily Rate Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>