force-app/main/default/objects/User/fields/Hourly_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate_Card__c</fullName>
    <formula>IF( ISPICKVAL( Pay_Type__c ,&quot;Hourly&quot;) ,  Rate_Card__c , 
    IF(ISPICKVAL( Pay_Type__c ,&quot;Daily&quot;) ,( Rate_Card__c / Hours_Per_Day__c ),0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Rate Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>