force-app/main/default/objects/User/fields/MIS_MyView__c.field-meta.xml
<CustomField>
    <fullName>MIS_MyView__c</fullName>
    <label>MIS MyView</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>