force-app/main/default/objects/User/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>