force-app/main/default/objects/User/fields/SOE_MyView__c.field-meta.xml
<CustomField>
    <fullName>SOE_MyView__c</fullName>
    <label>SOE MyView</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>