force-app/main/default/objects/User/validationRules/If_Phone_is_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Phone_is_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Phone )</errorConditionFormula>
    <errorMessage>Please enter Phone number as Country code(2 digits only) followed by Phone number.</errorMessage>
</ValidationRule>